--- a/CARTAS/src/paquete/Ayuda.fxml
+++ b/CARTAS/src/paquete/Ayuda.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.control.*?>
@@ -53,10 +55,96 @@
             <Image url="@../complementos/flecha-12.png" />
          </image>
       </ImageView>
-      <ImageView id="flechaAtras" fx:id="flechaAtras" fitHeight="59.0" fitWidth="91.0" layoutX="66.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" visible="false">
+      <ImageView id="flechaAtras" fx:id="flechaAtras" fitHeight="59.0" fitWidth="91.0" layoutX="66.0" layoutY="361.0" onMouseClicked="#flechaAtras" pickOnBounds="true" preserveRatio="true" visible="false">
          <image>
             <Image url="@../complementos/flechaAtras.png" />
          </image>
       </ImageView>
+      <ImageView fx:id="fotoRandall" fitHeight="340.0" fitWidth="331.0" layoutX="505.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../img/Randall.png" />
+         </image>
+      </ImageView>
+      <Circle fx:id="ataqueRandall2" layoutX="533.0" layoutY="604.0" radius="28.0" stroke="BLACK" strokeType="INSIDE" visible="false">
+         <fill>
+            <LinearGradient endX="1.0" endY="0.09999999999999998" startX="0.023809523809523808" startY="0.8">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color blue="0.23026315867900848" green="0.7690789699554443" red="0.8289473652839661" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color blue="1.0" green="1.0" red="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Circle>
+      <Circle fx:id="vidaRandall1" layoutX="723.0" layoutY="604.0" radius="28.0" stroke="BLACK" strokeType="INSIDE" visible="false">
+         <fill>
+            <LinearGradient startX="0.04285714285714286" startY="0.6714285714285715">
+               <stops>
+                  <Stop>
+                     <color>
+                        <Color blue="0.21436403691768646" green="0.31839364767074585" red="0.9078947305679321" />
+                     </color>
+                  </Stop>
+                  <Stop offset="1.0">
+                     <color>
+                        <Color blue="1.0" green="1.0" red="1.0" />
+                     </color>
+                  </Stop>
+               </stops>
+            </LinearGradient>
+         </fill>
+      </Circle>
+      <Label fx:id="ataqueRandall1" layoutX="522.0" layoutY="581.0" text="4" visible="false">
+         <font>
+            <Font name="Arial" size="40.0" />
+         </font>
+      </Label>
+      <Label fx:id="vidaRandall2" layoutX="712.0" layoutY="581.0" text="2" visible="false">
+         <font>
+            <Font name="Arial" size="40.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblVida" layoutX="696.0" layoutY="773.0" text="VIDA" visible="false">
+         <font>
+            <Font name="System Bold" size="23.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblAtaque" layoutX="487.0" layoutY="773.0" text="ATAQUE" visible="false">
+         <font>
+            <Font name="System Bold" size="23.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="flechaVida" fitHeight="99.0" fitWidth="143.0" layoutX="674.0" layoutY="644.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../complementos/FlechaGuia.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="flechaAtaque" fitHeight="99.0" fitWidth="143.0" layoutX="484.0" layoutY="650.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../complementos/FlechaGuia.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="flechaAlante1" fitHeight="77.0" fitWidth="91.0" layoutX="1156.0" layoutY="360.0" onMouseClicked="#ultimaFlecha" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../complementos/flecha-12.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="flechaVictor" fitHeight="83.0" fitWidth="123.0" layoutX="753.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true" visible="false">
+         <image>
+            <Image url="@../complementos/flechaVictor.png" />
+         </image>
+      </ImageView>
+      <Label fx:id="lblRareza" layoutX="877.0" layoutY="488.0" text="RAREZA (LEGENDARIA)" visible="false">
+         <font>
+            <Font name="System Bold" size="23.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
