--- a/CARTAS/src/paquete/Ayuda.fxml
+++ b/CARTAS/src/paquete/Ayuda.fxml
@@ -1,155 +1,256 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.paint.LinearGradient?>
+<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="830.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paquete.ControladorGuia">
+<AnchorPane prefHeight="830.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="paquete.ControladorGuia">
    <children>
-      <ImageView fitHeight="854.0" fitWidth="1348.0" layoutX="-19.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../complementos/librito.jpeg" />
-         </image></ImageView>
-      <Label layoutX="446.0" layoutY="61.0" text="GUIA DEL JUEGO">
-         <font>
-            <Font name="Oswald Regular" size="65.0" />
-         </font></Label>
-      <Button id="btnVolver" fx:id="btnVolver" layoutX="1207.0" layoutY="760.0" mnemonicParsing="false" onAction="#botonVolver" prefHeight="59.0" prefWidth="79.0" text="VOLVER" />
-      <Label fx:id="label1" layoutX="250.0" layoutY="214.0" text="- CUTRESTONE es un juego de estrategia de cartas 1 vs 1">
-         <font>
-            <Font name="Oswald Regular" size="31.0" />
-         </font>
-      </Label>
-      <Label id="label2" fx:id="label2" layoutX="250.0" layoutY="286.0" text="- Cada jugador consta de un mazo de 4 cartas">
-         <font>
-            <Font name="Oswald Regular" size="31.0" />
-         </font>
-      </Label>
-      <Label id="label5" fx:id="label5" layoutX="250.0" layoutY="520.0" text="- El objetivo es derrotar todas las cartas enemigas.">
-         <font>
-            <Font name="Oswald Regular" size="31.0" />
-         </font>
-      </Label>
-      <Label id="label3" fx:id="label3" layoutX="250.0" layoutY="368.0" text="- Existen 2 tipos de rarezas de cartas: Legendaria y común.">
-         <font>
-            <Font name="Oswald Regular" size="31.0" />
-         </font>
-      </Label>
-      <Label id="label4" fx:id="label4" layoutX="250.0" layoutY="438.0" text="- Las cartas legendarias son más poderosas.">
-         <font>
-            <Font name="Oswald Regular" size="31.0" />
-         </font>
-      </Label>
-      <ImageView id="tinta" fx:id="tinta" fitHeight="266.0" fitWidth="252.0" layoutX="499.0" layoutY="588.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../complementos/tinta.png" />
-         </image>
-      </ImageView>
-      <ImageView id="flechaAlante" fx:id="flechaAlante" fitHeight="77.0" fitWidth="91.0" layoutX="1156.0" layoutY="359.0" onMouseClicked="#flecha" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../complementos/flecha-12.png" />
-         </image>
-      </ImageView>
-      <ImageView id="flechaAtras" fx:id="flechaAtras" fitHeight="59.0" fitWidth="91.0" layoutX="66.0" layoutY="361.0" onMouseClicked="#flechaAtras" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/flechaAtras.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="fotoRandall" fitHeight="340.0" fitWidth="331.0" layoutX="505.0" layoutY="292.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../img/Randall.png" />
-         </image>
-      </ImageView>
-      <Circle fx:id="ataqueRandall2" layoutX="533.0" layoutY="604.0" radius="28.0" stroke="BLACK" strokeType="INSIDE" visible="false">
-         <fill>
-            <LinearGradient endX="1.0" endY="0.09999999999999998" startX="0.023809523809523808" startY="0.8">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color blue="0.23026315867900848" green="0.7690789699554443" red="0.8289473652839661" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color blue="1.0" green="1.0" red="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Circle>
-      <Circle fx:id="vidaRandall1" layoutX="723.0" layoutY="604.0" radius="28.0" stroke="BLACK" strokeType="INSIDE" visible="false">
-         <fill>
-            <LinearGradient startX="0.04285714285714286" startY="0.6714285714285715">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color blue="0.21436403691768646" green="0.31839364767074585" red="0.9078947305679321" />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color blue="1.0" green="1.0" red="1.0" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </fill>
-      </Circle>
-      <Label fx:id="ataqueRandall1" layoutX="522.0" layoutY="581.0" text="4" visible="false">
-         <font>
-            <Font name="Arial" size="40.0" />
-         </font>
-      </Label>
-      <Label fx:id="vidaRandall2" layoutX="712.0" layoutY="581.0" text="2" visible="false">
-         <font>
-            <Font name="Arial" size="40.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblVida" layoutX="696.0" layoutY="773.0" text="VIDA" visible="false">
-         <font>
-            <Font name="System Bold" size="23.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblAtaque" layoutX="487.0" layoutY="773.0" text="ATAQUE" visible="false">
-         <font>
-            <Font name="System Bold" size="23.0" />
-         </font>
-      </Label>
-      <ImageView fx:id="flechaVida" fitHeight="99.0" fitWidth="143.0" layoutX="674.0" layoutY="644.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/FlechaGuia.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="flechaAtaque" fitHeight="99.0" fitWidth="143.0" layoutX="484.0" layoutY="650.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/FlechaGuia.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="flechaAlante1" fitHeight="77.0" fitWidth="91.0" layoutX="1156.0" layoutY="360.0" onMouseClicked="#ultimaFlecha" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/flecha-12.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="flechaVictor" fitHeight="83.0" fitWidth="123.0" layoutX="753.0" layoutY="463.0" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/flechaVictor.png" />
-         </image>
-      </ImageView>
-      <Label fx:id="lblRareza" layoutX="877.0" layoutY="488.0" text="RAREZA (LEGENDARIA)" visible="false">
-         <font>
-            <Font name="System Bold" size="23.0" />
-         </font>
-      </Label>
-      <ImageView id="flechaAtras" fx:id="flechaAtras1" fitHeight="59.0" fitWidth="91.0" layoutX="85.0" layoutY="361.0" onMouseClicked="#flechaAtrasjejeje" pickOnBounds="true" preserveRatio="true" visible="false">
-         <image>
-            <Image url="@../complementos/flechaAtras.png" />
-         </image>
-      </ImageView>
+      <Pane fx:id="panel1" prefHeight="830.0" prefWidth="1300.0">
+         <children>
+            <ImageView fitHeight="929.0" fitWidth="1315.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/fondoMenu.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="439.0" layoutY="24.0" text="Guía de CutreStone">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label layoutX="169.0" layoutY="178.0" text="&gt; CutreStone, es un juego de estragegia de cartas 1vs1.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="169.0" layoutY="229.0" text="&gt; Cada jugador empieza con 4 cartas.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="169.0" layoutY="283.0" text="&gt; Se ataca por turnos y solo puedes realizar un ataque por turno.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="338.0" text="&gt; El objetivo es derrotar todas la cartas enemigas.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="480.0" text="&gt; Para atacar tienes que seleccionar una carta aliada y la carta">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="568.0" text="&gt; Cuando atacas inflinges tu daño de ataque a su vida y tu carta">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="656.0" text="&gt; Cuando la vida de una carta llega a 0 queda inhabilitada.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="710.0" text="&gt; El juego finaliza cuando derrotas las 4 cartas del rival y alguna">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="193.0" layoutY="133.0" text="FUNDAMENTOS BÁSICOS">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="193.0" layoutY="432.0" text="JUGABILIDAD">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="193.0" layoutY="514.0" text="enemiga a la que deseas atacar.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="190.0" layoutY="603.0" text="sufre el daño de ataque de la carta enemiga.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="190.0" layoutY="745.0" text="carta tuya sigue con vida.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="110.0" fitWidth="100.0" layoutX="1158.0" layoutY="700.0" onMouseClicked="#irPagina2" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/flechaAlante.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="256.0" fitWidth="269.0" layoutX="988.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/tinta.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="1229.0" layoutY="796.0" text="Página 1">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="150.0" fitWidth="67.0" layoutX="1220.0" layoutY="14.0" onMouseClicked="#cerrarApp" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/cierre.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="67.0" layoutX="1142.0" layoutY="14.0" onMouseClicked="#btnVolver" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/atrasMenu.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
+      <Pane fx:id="panel2" prefHeight="830.0" prefWidth="1300.0" visible="false">
+         <children>
+            <ImageView fitHeight="929.0" fitWidth="1315.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/fondoMenu.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="439.0" layoutY="24.0" text="Guía de CutreStone">
+               <font>
+                  <Font name="System Bold" size="48.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="249.0" text="&gt; Existen 2 rarezas de cartas: Legendaria y común.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="168.0" layoutY="300.0" text="&gt; Las cartas legendarias son mas poderosas.">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="192.0" layoutY="204.0" text="CARTA">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="110.0" fitWidth="100.0" layoutX="1158.0" layoutY="700.0" onMouseClicked="#irPagina1" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/flechaAtras.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="256.0" fitWidth="269.0" layoutX="220.0" layoutY="365.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/varian.png" />
+               </image>
+            </ImageView>
+            <Circle layoutX="241.0" layoutY="604.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+               <fill>
+                  <LinearGradient endX="1.0" endY="0.09999999999999998" startX="0.023809523809523808" startY="0.8">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.8289473652839661" green="0.7690789699554443" blue="0.23026315867900848" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Circle>
+            <Circle layoutX="383.0" layoutY="608.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+               <fill>
+                  <LinearGradient startX="0.04285714285714286" startY="0.6714285714285715">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.9078947305679321" green="0.31839364767074585" blue="0.21436403691768646" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Circle>
+            <Label fx:id="carta1Vida" layoutX="372.0" layoutY="585.0" text="6">
+               <font>
+                  <Font name="Arial" size="40.0" />
+               </font>
+            </Label>
+            <Label fx:id="carta1Ataque" layoutX="230.0" layoutY="581.0" text="4">
+               <font>
+                  <Font name="Arial" size="40.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="70.0" fitWidth="242.0" layoutX="280.0" layoutY="494.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/flechaIzquierda.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="225.0" layoutY="613.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/flechaArriba.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="384.0" layoutY="613.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/flechaArriba.png" />
+               </image>
+            </ImageView>
+            <Label layoutX="368.0" layoutY="677.0" text="VIDA">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="190.0" layoutY="677.0" text="ATAQUE">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="463.0" layoutY="509.0" text="RAREZA">
+               <font>
+                  <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="1229.0" layoutY="796.0" text="Página 2">
+               <font>
+                  <Font name="System Bold Italic" size="14.0" />
+               </font>
+            </Label>
+            <ImageView fitHeight="256.0" fitWidth="269.0" layoutX="988.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/tinta.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="67.0" layoutX="1219.0" layoutY="14.0" onMouseClicked="#cerrarApp" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/cierre.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="67.0" layoutX="1141.0" layoutY="14.0" onMouseClicked="#btnVolver" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../complementos/atrasMenu.png" />
+               </image>
+            </ImageView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
