--- a/CARTAS/src/paquete/Ayuda.fxml
+++ b/CARTAS/src/paquete/Ayuda.fxml
@@ -117,7 +117,7 @@
             </ImageView>
          </children>
       </Pane>
-      <Pane fx:id="panel2" prefHeight="830.0" prefWidth="1300.0">
+      <Pane fx:id="panel2" prefHeight="830.0" prefWidth="1300.0" visible="false">
          <children>
             <ImageView fitHeight="855.0" fitWidth="1333.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -129,17 +129,17 @@
                   <Font name="System Bold" size="48.0" />
                </font>
             </Label>
-            <Label layoutX="168.0" layoutY="221.0" text="&gt; Existen 2 rarezas de cartas: Legendaria y común.">
+            <Label layoutX="168.0" layoutY="176.0" text="&gt; Existen 2 rarezas de cartas: Legendaria y común.">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="168.0" layoutY="272.0" text="&gt; Las cartas legendarias son mas poderosas.">
+            <Label layoutX="168.0" layoutY="227.0" text="&gt; Las cartas legendarias son mas poderosas.">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="192.0" layoutY="176.0" text="CARTA">
+            <Label layoutX="192.0" layoutY="131.0" text="CARTA">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -149,12 +149,17 @@
                   <Image url="@../complementos/flechaAtras.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="256.0" fitWidth="269.0" layoutX="198.0" layoutY="432.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="256.0" fitWidth="270.0" layoutX="198.0" layoutY="441.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/varian.png" />
                </image>
             </ImageView>
-            <Circle layoutX="219.0" layoutY="671.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+            <ImageView fitHeight="256.0" fitWidth="194.0" layoutX="642.0" layoutY="442.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/ed.png" />
+               </image>
+            </ImageView>
+            <Circle layoutX="219.0" layoutY="680.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
                <fill>
                   <LinearGradient endX="1.0" endY="0.09999999999999998" startX="0.023809523809523808" startY="0.8">
                      <stops>
@@ -172,7 +177,7 @@
                   </LinearGradient>
                </fill>
             </Circle>
-            <Circle layoutX="361.0" layoutY="675.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+            <Circle layoutX="361.0" layoutY="684.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
                <fill>
                   <LinearGradient startX="0.04285714285714286" startY="0.6714285714285715">
                      <stops>
@@ -190,42 +195,42 @@
                   </LinearGradient>
                </fill>
             </Circle>
-            <Label fx:id="carta1Vida" layoutX="350.0" layoutY="652.0" text="6">
+            <Label fx:id="carta1Vida" layoutX="350.0" layoutY="661.0" text="6">
                <font>
                   <Font name="Arial" size="40.0" />
                </font>
             </Label>
-            <Label fx:id="carta1Ataque" layoutX="208.0" layoutY="648.0" text="4">
+            <Label fx:id="carta1Ataque" layoutX="208.0" layoutY="657.0" text="4">
                <font>
                   <Font name="Arial" size="40.0" />
                </font>
             </Label>
-            <ImageView fitHeight="70.0" fitWidth="242.0" layoutX="258.0" layoutY="561.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="70.0" fitWidth="242.0" layoutX="258.0" layoutY="570.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../complementos/flechaIzquierda.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="203.0" layoutY="680.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="203.0" layoutY="689.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../complementos/flechaArriba.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="362.0" layoutY="680.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="65.0" fitWidth="22.0" layoutX="362.0" layoutY="689.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../complementos/flechaArriba.png" />
                </image>
             </ImageView>
-            <Label layoutX="346.0" layoutY="744.0" text="VIDA">
+            <Label layoutX="346.0" layoutY="753.0" text="VIDA">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="168.0" layoutY="744.0" text="ATAQUE">
+            <Label layoutX="168.0" layoutY="753.0" text="ATAQUE">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="441.0" layoutY="576.0" text="RAREZA">
+            <Label layoutX="441.0" layoutY="585.0" text="RAREZA">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -250,14 +255,70 @@
                   <Image url="@../complementos/atrasMenu.png" />
                </image>
             </ImageView>
-            <Label layoutX="168.0" layoutY="325.0" text="&gt; Las cartas comunes tienen un 70 % probabilidad de acierto,">
+            <Label layoutX="168.0" layoutY="280.0" text="&gt; Las cartas comunes tienen un 70 % probabilidad de acierto,">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="192.0" layoutY="368.0" text="mientras que las legendarias el 100%">
+            <Label layoutX="192.0" layoutY="323.0" text="mientras que las legendarias el 100%">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="208.0" layoutY="402.0" text="CARTA LEGENDARIA" textFill="RED">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="670.0" layoutY="402.0" text="CARTA COMÚN" textFill="RED">
+               <font>
+                  <Font name="System Bold Italic" size="18.0" />
+               </font>
+            </Label>
+            <Circle layoutX="665.0" layoutY="682.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+               <fill>
+                  <LinearGradient endX="1.0" endY="0.09999999999999998" startX="0.023809523809523808" startY="0.8">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.8289473652839661" green="0.7690789699554443" blue="0.23026315867900848" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Circle>
+            <Circle layoutX="812.0" layoutY="686.0" radius="21.0" stroke="BLACK" strokeType="INSIDE">
+               <fill>
+                  <LinearGradient startX="0.04285714285714286" startY="0.6714285714285715">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.9078947305679321" green="0.31839364767074585" blue="0.21436403691768646" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="1.0" green="1.0" blue="1.0" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Circle>
+            <Label fx:id="carta1Vida1" layoutX="801.0" layoutY="663.0" text="3">
+               <font>
+                  <Font name="Arial" size="40.0" />
+               </font>
+            </Label>
+            <Label fx:id="carta1Ataque1" layoutX="654.0" layoutY="659.0" text="3">
+               <font>
+                  <Font name="Arial" size="40.0" />
                </font>
             </Label>
          </children>
